more spacing adjustments, try to avoid getting default scroll bar

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -204,7 +204,7 @@ html {
 .heading-medium {
   font-family: 'NanumMyeongjo', serif;
   font-size: clamp(18px, 4.5vw, 32px);
-  line-height: 1.2;
+  line-height: 1;
   font-weight: 400;
   color: #000000;
 }
@@ -212,7 +212,7 @@ html {
 .heading-small {
   font-family: 'NanumMyeongjo', serif;
   font-size: clamp(14px, 3.5vw, 24px);
-  line-height: 1.2;
+  line-height: 1;
   font-weight: 400;
   color: #4A4A4A;
 }
@@ -256,27 +256,26 @@ html {
   text-decoration: underline;
 }
 
-/* Consistent margin system */
 .page-margins {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 @media (min-width: 1024px) {
   .page-margins {
-    padding-left: 4rem;
-    padding-right: 4rem;
+    padding-left: 7rem;
+    padding-right: 7rem;
   }
 }
 
 .page-margins-wide {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 @media (min-width: 1024px) {
   .page-margins-wide {
-    padding-left: 3rem;
-    padding-right: 3rem;
+    padding-left: 7rem;
+    padding-right: 7rem;
   }
 } 
